[workspace]
members = ["bin", "gander", "gander_legacy"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
gander = { path = "gander", version = "0.0.1" }
gander_legacy = { path = "gander_legacy", version = "0.0.1" }
clap = { version = "4.5.48", features = ["derive"] }
thiserror = "2.0.17"
